--- a/szlovakia-heteny/index.html
+++ b/szlovakia-heteny/index.html
@@ -7,11 +7,13 @@
     <title>Sketch</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script src="../libraries/p5.min.js"></script>
+    <script src="../libraries/p5.sound.min.js"></script>
+    <script src="../libraries/mappa.js"></script>
   </head>
 
   <body>
-    <a href="/szlovakia-heteny/index.html">Hetény</a><br/>
-    <a href="/szlovakia-szigetkoz/index.html">Szigetköz</a><br/>
-    <a href="/testsite.html">Link</a><br/>
+    <script src="heteny.js"></script>
   </body>
 </html>
