fixed links on the main page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </head>
 
   <body>
-    <a href="/szlovakia-heteny/index.html">Hetény</a><br/>
-    <a href="/szlovakia-szigetkoz/index.html">Szigetköz</a><br/>
-    <a href="/testsite.html">Link</a><br/>
+    <p1><a href="./szlovakia-heteny/index.html">Hetény</a></p1><br/>
+    <p1><a href="./szlovakia-szigetkoz/index.html">Szigetköz</a></p1><br/>
   </body>
 </html>
