fixed the link format

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <p1><a href="./szlovakia-heteny/index.html">Hetény</a></p1><br/>
-    <p1><a href="./szlovakia-szigetkoz/index.html">Szigetköz</a></p1><br/>
+    <p1><a href="./szlovakia-heteny">Hetény</a></p1><br/>
+    <p1><a href="./szlovakia-szigetkoz">Szigetköz</a></p1><br/>
   </body>
 </html>
