--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   </head>
 
   <body>
-    <p1><a href="./szlovakia-heteny">Hetény</a></p1><br/>
-    <p1><a href="./szlovakia-szigetkoz">Szigetköz</a></p1><br/>
+    <p>Main Page</p>
   </body>
 </html>
