--- a/szlovakia-szigetkoz/index.html
+++ b/szlovakia-szigetkoz/index.html
@@ -11,6 +11,8 @@
     <script src="../libraries/p5.min.js"></script>
     <script src="../libraries/p5.sound.min.js"></script>
     <script src="../libraries/mappa.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5.capture@1.4.1/dist/p5.capture.umd.min.js"></script>
+
   </head>
 
   <body>
