--- a/bratislava-24/index.html
+++ b/bratislava-24/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="../libraries/p5.min.js"></script>
-    <script src="../libraries/p5.sound.min.js"></script>
     <script src="../libraries/mappa.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5.capture@1.4.1/dist/p5.capture.umd.min.js"></script>
+    <!-- <script src="../libraries/p5.capture.umd.min.js"></script> -->
   </head>
 
   <body>
@@ -21,3 +20,4 @@
   </body>
 
 </html>
+ 
